[tool.poetry]
name = "parserbee"
version = "0.1.0"
description = "Data magic daemon"
authors = ["Christopher David <chris@arcadelabs.co>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
