[tool.poetry]
name = "parserbee"
version = "0.1.0"
description = "Data magic daemon"
authors = ["Christopher David <chris@arcadelabs.co>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.103.1"
python = "^3.11"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
